# projection_upsampling_network

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: data_generation.ipynb  prediction.ipynb  training.ipynb
examples/dataset/microtubules/test/Cell_001/: SIM_gt.mrc
examples/dataset/microtubules/test/Cell_002/: SIM_gt.mrc
examples/dataset/microtubules/test/Cell_003/: SIM_gt.mrc
examples/dataset/microtubules/train/Cell_010/: SIM_gt.mrc
examples/dataset/microtubules/train/Cell_011/: SIM_gt.mrc
examples/dataset/microtubules/train/Cell_012/: SIM_gt.mrc
examples/dataset/microtubules/train/Cell_013/: SIM_gt.mrc
examples/dataset/microtubules/train/Cell_014/: SIM_gt.mrc
examples/dataset/microtubules/train/Train/SR/GT/: 1.tif  2.tif  3.tif  4.tif  5.tif
examples/dataset/microtubules/val/Cell_052/: SIM_gt.mrc
examples/dataset/microtubules/val/Cell_053/: SIM_gt.mrc
examples/dataset/microtubules/val/Cell_054/: SIM_gt.mrc
examples/dataset/microtubules/val/Train/SR/GT/: 1.tif  2.tif  3.tif
examples/trained_model/microtubules/MT-training_tutorial/: config.json  weights_best.h5  weights_last.h5
imageJ Scripts/: ImageJ-reconstruction_FAIR_SIM.bsh  ImageJ-reconstruction_FAIR_SIM_AI_DATA.bsh  ImageJ-reconstruction_FAIR_SIM_AI_DATA_patch.bsh  ImageJ-reconstruction_FAIR_SIM_patch.bsh  Z-projected_HSNR_and_LSNR.jim.ijm  Z-projected_HSNR_and_LSNR.jim.jim.ijm  Z-projected_HSNR_and_LSNR_with_batch_processing.ijm  all_image_to_stack.ijm  createa_fair_SIM.ijm.ijm.ijm  createa_fair_SIM_reduced_z-axis.ijm.ijm  fair_sim_batch_in_folder.bsh  prepareForFairSIM.ijm.ijm.ijm
licenses/: BSD-3  MIT
src/projection_upsampling_network/: augmentation.py  caped.yaml  data_gen.py  projection_upsampling_class.py  upsampling_class_experiments_kernal_3_experiment_9_3_3.py
trained_model/microtubules_trained/: config.json
