[metadata]
name = projection_upsampling_network

description = pakage for projection upsampling network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArghaSarker/projection_upsampling_network
author = Argha Sarker
author_email = asarker@uni-osnabrueck.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/ArghaSarker/projection_upsampling_network/issues
    Documentation = https://github.com/ArghaSarker/projection_upsampling_network#README.md
    Source Code = https://github.com/ArghaSarker/projection_upsampling_network
    User Support = https://github.com/ArghaSarker/projection_upsampling_network/issues

[options]
packages = find:
install_requires =
    caped-ai

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    projection_upsampling_network = projection_upsampling_network:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
